src/test/deca/context/invalid/print_boolean.deca
// Description:
//    print non valid
//
// Resultats:
//    Ligne 13: Print non valid car ni int, ni float, ni string
//
// Historique:
//    cree le 01/01/2022


{
    boolean b;
    print (b);
}